syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos.FinancialAdmin";

package financialAdmin;

service FinancialAdminService {
  // Wallet operations
  rpc GetWalletsPaging (ParameterDto) returns (PagingDto);
  rpc GetUserFilters (EmptyRequest) returns (UserFiltersResponse);
  rpc BlockOrUnblockWallet (BlockWalletRequest) returns (ResponseDto);
  
  // Wallet transactions operations
  rpc GetWalletTransactionsPaging (WalletTransactionParameterDto) returns (PagingDto);
  rpc CreateWalletTransaction (WalletTransactionDto) returns (ResponseDto);
  rpc GetWalletTransactionDetail (TransactionIdRequest) returns (WalletTransactionDto);
  
  // Installment operations
  rpc PayInstallment (TransactionIdRequest) returns (ResponseDto);
  
  // Facility operations
  rpc CreateFacilities (FacilitiesDto) returns (ResponseDto);
  rpc RegisterFacilitiesByExcel (ExcelUploadRequest) returns (ResponseDto);
  rpc ProcessFacilityPaymentsByExcel (ExcelUploadRequest) returns (ResponseDto);
}

// Common message types
message EmptyRequest {}

message ResponseDto {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  string object_string = 4;
  bytes data = 5;
}

// Parameter message types
message ParameterDto {
  int32 page_id = 1;
  int32 take = 2;
  string search_key = 3;
  string filter = 4;
}

message WalletTransactionParameterDto {
  int32 page_id = 1;
  int32 take = 2;
  string search_key = 3;
  string filter = 4;
  int32 wallet_id = 5;
  string date_from = 6;
  string date_to = 7;
  int32 type_id = 8;
}

// Wallet messages
message UserFiltersResponse {
  repeated UserFilterDto filters = 1;
}

message UserFilterDto {
  int32 id = 1;
  string name = 2;
  string user_name = 3;
  string name_value = 4;
}

message BlockWalletRequest {
  bool is_blocked = 1;
  int32 wallet_id = 2;
}

// Paging response
message PagingDto {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  bytes items = 4;
  int32 total_row = 5;
  int32 page_id = 6;
  int32 take = 7;
  bytes filter = 8;
}

// Transaction messages
message WalletTransactionDto {
  int32 id = 1;
  int32 wallet_id = 2;
  string wallet_owner = 3;
  double amount = 4;
  string description = 5;
  bool is_success = 6;
  int32 type_id = 7;
  string type_name = 8;
  string transaction_date = 9;
  string tracking_code = 10;
  int32 order_id = 11;
  string transaction_number = 12;
  string bank_name = 13;
  bool is_verified = 14;
}

message TransactionIdRequest {
  int32 transaction_id = 1;
}

// Facilities messages
message FacilitiesDto {
  int32 id = 1;
  int32 wallet_id = 2;
  string wallet_owner = 3;
  double amount = 4;
  string description = 5;
  int32 number_of_installments = 6;
  string first_payment_date = 7;
  double monthly_payment = 8;
  bool with_interest = 9;
  double interest_rate = 10;
}

// Excel upload messages
message ExcelUploadRequest {
  string type = 1;
  bytes file_data = 2;
  string file_name = 3;
  string content_type = 4;
} 